fix indicator collapse transition

--- a/client/src/components/Sidenav/Sidenav.css
+++ b/client/src/components/Sidenav/Sidenav.css
@@ -4,16 +4,12 @@
 
 .sidenav {
   margin-top: 56px;
-  width: 200px;
+  width: 250px;
 }
 
 .sidenav li>a>i.material-icons {
   color: #fff;
   pointer-events: none;
-}
-
-.sidenav li>a {
-  padding: 0 12px;
 }
 
 .active,
