--- a/client/src/components/Tabbar/Tabbar.css
+++ b/client/src/components/Tabbar/Tabbar.css
@@ -1,5 +1,5 @@
 .tabbar {
-  margin-left: 200px;
+  margin-left: 250px;
 }
 
 .tabbar>.col {
